--- a/src/components/MovieListing/MovieListing.scss
+++ b/src/components/MovieListing/MovieListing.scss
@@ -9,8 +9,8 @@
     }
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px
+.movie-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    grid-gap: 15px;
 }
